# e2b

./: .gitignore  CLAUDE.md  README.md  code_interpreter_tool.py  insight_results  main.py  pyproject.toml  report_results  time_series_results
agents/: data_analyzer.py  data_reader.py  insight_generator.py  model_predictor.py  report_creator.py
tasks/: data_tasks.py
tools/: code_interpreter_tool.py
workflow/: data_analysis_workflow.py
